# uv

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.py  capsules.json  pyproject.toml  sources.json
examples/: localhost.cert  localhost.key  sleep.py  tcp.py  tcp_server.py  timers.py
promisedio/error/: __init__.py  error.c
promisedio/fs/: __init__.py  fs.c  fs_export.h
promisedio/fs/capsule/promisedio/: fs.h
promisedio/loop/: __init__.py  _internal.py  loop.c  loop_export.h
promisedio/loop/capsule/promisedio/: loop.h
promisedio/loop/clinic/: loop.c.h
promisedio/ns/: __init__.py  ns.c  ns_defs.h  ns_export.h
promisedio/ns/3.10.0/: socketmodule.c
promisedio/ns/3.10.1/: socketmodule.c
promisedio/ns/3.10.2/: socketmodule.h
promisedio/ns/capsule/promisedio/: ns.h
promisedio/ns/clinic/: ns.c.h
promisedio/signal/: __init__.py  signal.c  signal_export.h
promisedio/signal/capsule/promisedio/: signal.h
promisedio/timer/: __init__.py  timer.c  timer_capsule.h  timer_defs.h  timer_export.h
promisedio/timer/capsule/promisedio/: timer.h
simple_tests/: test0.py  test1.py  test2.py  test3.py
